# template-basic-workflow-py

./: README.md  app.py  pyproject.toml
src/: app.py
